Seems to be the final version of the local game.